added client apis
